correct keys input

--- a/src/app/pages/keys-administration/keys-administration.component.html
+++ b/src/app/pages/keys-administration/keys-administration.component.html
@@ -32,7 +32,11 @@
           <td>{{ key.code }}</td>
           <td>{{ key.room }}</td>
           <td>
-            <button style="padding: 10px 20px" class="btn btn-primary danger">
+            <button
+              style="padding: 10px 20px"
+              class="btn btn-primary danger"
+              (click)="deleteKeyRecord(key.code)"
+            >
               Delete
             </button>
           </td>
