--- a/src/app/pages/key-rentals-overview/key-rentals-overview.component.html
+++ b/src/app/pages/key-rentals-overview/key-rentals-overview.component.html
@@ -4,6 +4,7 @@
     (popStatus)="handlePopStatus($event)"
     [objectForAction]="rentToSave"
     apiEndpoint="key-rentals"
+    action="update"
   ></dialog-popup>
   <div class="container">
     <h1>Rents Overview</h1>
