--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,29 +1,47 @@
-.card{
-    margin: 10px;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    background-color: #f8f9fa;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    width: 300px;
+.card {
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  background-color: #f8f9fa;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  width: 250px;
 }
-.card:hover{
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    scale: 1.05;
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  scale: 1.05;
+}
+.card img {
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+  object-fit: cover;
+}
 
+.card-title {
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: bold;
 }
-.card img{
-    width: 100%;
-    height: 200px;
-    border-radius: 10px;
-    object-fit: cover;
+.slider {
+  display: flex;
+  overflow-x: auto;
+  padding: 10px;
+  width: 70%;
+  white-space: nowrap;
 }
-
-.card-title{
-    margin-top: 20px;
-    font-size: 20px;
-    font-weight: bold;
+.slider .card {
+  flex: 0 0 auto; /* ensures each card retains its width and doesn't shrink */
+}
+.slider::-webkit-scrollbar {
+  background: rgb(248, 242, 242);
+  height: 10px;
+  border-radius: 5px;
+}
+.slider::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
 }
