--- a/src/app/pages/key-rentals-overview/key-rentals-overview.component.html
+++ b/src/app/pages/key-rentals-overview/key-rentals-overview.component.html
@@ -8,6 +8,10 @@
   ></dialog-popup>
   <div class="container">
     <h1>Rents Overview</h1>
+    <p class="note">
+      Overview of all rents. You can search by key code, filter by date range
+      etc. You can manually return a key by clicking the "Return" button.
+    </p>
     <div class="row">
       <input
         [(ngModel)]="filter.searchTerm"
