--- a/src/app/pages/keys-administration/keys-administration.component.html
+++ b/src/app/pages/keys-administration/keys-administration.component.html
@@ -8,6 +8,11 @@
   ></dialog-popup>
   <div class="container">
     <h1>Keys Overview</h1>
+    <p class="note">
+      Fill in the fields to create a new key record. Click on the "+" button to
+      save the record. If Updated or Deleted, the record will be updated or
+      deleted from the database with provided values.
+    </p>
     <div class="row">
       <input
         [(ngModel)]="filter.searchTerm"
