--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,5 +1,9 @@
 <section>
   <h1>Settings</h1>
+  <p class="note">
+    Text settings for the application. Update the text and click "Save" to save
+    the changes.
+  </p>
   <label class="form-label" for="">Safety Instructions:</label>
   <textarea
     [(ngModel)]="safetyInstructions"
