--- a/src/app/pages/visits-overview/visits-overview.component.html
+++ b/src/app/pages/visits-overview/visits-overview.component.html
@@ -1,6 +1,10 @@
 <section>
   <div class="container">
     <h1>Visits Overview</h1>
+    <p class="note">
+      Visits overview. You can search by name, filter by date range etc. You can
+      manually return a visit by clicking the "Return" button.
+    </p>
     <div class="row">
       <input
         [(ngModel)]="filter.searchTerm"
