--- a/src/app/components/scan-slide/scan-slide.component.html
+++ b/src/app/components/scan-slide/scan-slide.component.html
@@ -14,7 +14,7 @@
     <p>
       To proceed please <b>scan QR code</b> and follow instruction.<br />
       If code you dont have code or it is not working proceed with Manual
-      Scaning
+      Typing.
     </p>
     <button class="btn btn-primary" (click)="nextSlide()">Manual Typing</button>
   </article>
