--- a/src/app/components/visitor-slide/visitor-slide.component.html
+++ b/src/app/components/visitor-slide/visitor-slide.component.html
@@ -2,10 +2,18 @@
   <img src="assets/profile.png" alt="" class="hero-img" />
   <article class="instruction">
     <h1>Visitor Details</h1>
-    <input type="text" [(ngModel)]="visitToSave.name" />
-    <input type="email" [(ngModel)]="visitToSave.email" />
-    <input type="text" [(ngModel)]="visitToSave.companyName" />
-    <input type="text" [(ngModel)]="visitToSave.host" />
+    <input type="text" [(ngModel)]="visitToSave.name" placeholder="Full Name" />
+    <input type="email" [(ngModel)]="visitToSave.email" placeholder="Email" />
+    <input
+      type="text"
+      [(ngModel)]="visitToSave.companyName"
+      placeholder="Company"
+    />
+    <input
+      type="text"
+      [(ngModel)]="visitToSave.host"
+      placeholder="Contact Person"
+    />
     <div class="row">
       <button class="btn btn-primary" (click)="triggerTraining()">
         Continue
