--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,7 +17,7 @@
       <span class="card-title">Visitors overview</span>
     </div>
     <div class="card" [routerLink]="'/key-rentals-overview'">
-      <img src="./assets/key.jpg" alt="" />
+      <img src="./assets/overview.svg" alt="" />
       <span class="card-title">Rent overviews</span>
     </div>
     <div class="card" [routerLink]="'/key-administration'">
@@ -25,7 +25,7 @@
       <span class="card-title">Key admin</span>
     </div>
     <div class="card" [routerLink]="'/settings'">
-      <img src="./assets/key.jpg" alt="" />
+      <img src="./assets/settings.svg" alt="" />
       <span class="card-title">Settings</span>
     </div>
   </div>
