--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -22,3 +22,17 @@ nav {
   border-radius: 50%;
   margin-right: 30px;
 }
+.btn-logout {
+  position: absolute;
+  right: 120px;
+  top: 25px;
+  background-color: var(--orange-color);
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.btn-logout:hover {
+  background-color: var(--gray-color);
+}
