--- a/src/app/components/dialog-popup/dialog-popup.component.html
+++ b/src/app/components/dialog-popup/dialog-popup.component.html
@@ -1,9 +1,9 @@
 <div class="dialog-window">
-  <span class="dialog-title">Updating Record</span>
-  <p>Do you really want to update this ?</p>
+  <span class="dialog-title">Aktualizace záznamu</span>
+  <p>Opravdu chcete tento záznam změnit?</p>
   <button (click)="performAction()" class="btn btn-primary gp-1 pd1020">
-    Yes</button
+    Ano</button
   ><button (click)="closePopup()" class="btn btn-primary gp-1 pd1020">
-    No
+    Ne
   </button>
 </div>
